--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,12 @@ flask
 flask-cors
 flask-babel
 flask-session
+flask-swagger
+flasgger
+flask-login
+flask-wtf
+flask-migrate
+flask-sqlalchemy
 requests
 tqdm
 numpy
