--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ fasttext
 gunicorn
 python-dotenv
 redis
-libretranslate
-apscheduler>=3.10.0,<4
-git+https://github.com/argosopentech/argos-translate.git
+
+# LibreTranslate dependencies
+libretranslate==1.4.0
+APScheduler==3.9.1
+argostranslate==1.9.1
